2009-04-13  Christian Hoff  <christian_hoff@gmx.net>
	Add support for virtual methods(vm) to the generator.

	* parser/gapi2xml.pl: Generate a class_struct element with
	all members of the class structure. Dump the first (instance)
	parameter for signal and vm elements. Bump up parser version.
	* generator/GObjectVM.cs: Added. Support for GObject virtual methods.
	* generator/DefaultSignalHandler.cs: Signal specific part of vm
	generation.
	* generator/InterfaceVM.cs: New class for interface vms.
	* generator/ObjectBase.cs: Parse the class struct.

2009-04-09  Mike Kestner  <mkestner@novell.com>

	* glib/ListBase.cs: fix g_object_unref dllimport lib.
	[Fixes #493128]

2009-04-05  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/Target.custom: custom implementation of TableNewFromList.
	* gtk/TargetList.custom: use Target.TableNewFromList method
	to convert the TargetList to a TargetEntry array.
	* gtk/glue/targetlist.c: deleted.

2009-03-28  Christian Hoff  <christian_hoff@gmx.net>

	* gtk/TextBuffer.custom: Use the right overload of Marshal.Copy
	[Fixes #480010]

2009-03-19  Christian Hoff  <christian_hoff@gmx.net>

	* parser/gapi2xml.pl: Introduce a "parser_version" attribute.
	* generator/GenBase.cs: Implement a property to access the
	attribute's value.

2009-03-17  Mike Kestner  <mkestner@novell.com>

	* bootstrap-generic: expose LIBTOOLIZE env variable to support
	building on mac osx with glibtoolize.  [Fixes #480559]

2009-03-17  Christian Hoff  <christian_hoff@gmx.net>

	* gdk/Property.custom: add new overloads to the Get method
	for the most common property types
	* gdk/Global.custom: Use the new overloads of Property.Get instead of glue

2009-03-16  Mike Kestner  <mkestner@novell.com>

	* gtk/NodeSelection.cs: use new Adapter prop on NodeStore.
	* gtk/NodeStore.cs: some encapsulation rework.
	* gtk/NodeView.cs: use new Adapter prop on NodeStore. new methods
	to support manipulation of the view by TreeNode, like scrolling
	and cell bounds lookups.  