@@ -37,11 +37,22 @@ public Adjustment (double value, double lower, double upper, double step_increme
 	Raw = gtk_adjustment_new(value, lower, upper, step_increment, page_increment, page_size);
 }
 
-[DllImport("gtksharpglue-2")]
-static extern void gtksharp_gtk_adjustment_set_bounds (IntPtr i, double lower, double upper, double step_increment, double page_increment, double page_size);
+[DllImport("libgobject-2.0-0.dll")]
+static extern void g_object_freeze_notify (IntPtr inst);
+
+[DllImport("libgobject-2.0-0.dll")]
+static extern void g_object_thaw_notify (IntPtr inst);
 
 public void SetBounds (double lower, double upper, double step_increment, double page_increment, double page_size)
 {
-	gtksharp_gtk_adjustment_set_bounds (this.Handle, lower, upper, step_increment, page_increment, page_size);
-}
+	// g_object_freeze_notify/g_object_thaw_notify calls are necessary to to avoid multiple emissions of the "changed" signal
+	g_object_freeze_notify (this.Handle);
 
+	Lower = lower;
+	Upper = upper;
+	StepIncrement = step_increment;
+	PageIncrement = page_increment;
+	PageSize = page_size;
+
+	g_object_thaw_notify (this.Handle);
+}
