@@ -1,4 +1,10 @@
+2009-04-14  Christian Hoff  <christian_hoff@gmx.net>
+
+	* gtk/Adjustment.custom: Deglued implementation of SetBounds.
+	* gtk/glue/Adjustment.c: Kill.
+
 2009-04-13  Christian Hoff  <christian_hoff@gmx.net>
+
 	Add support for virtual methods(vm) to the generator.
 
 	* parser/gapi2xml.pl: Generate a class_struct element with
